YTDB-507-cleanup